# klib-c

./: CMakeLists.txt  name
src/: Arena.c  CMakeLists.txt  CmdLine.c  ECS.c  Logger.c  Map.c  Pool.c  RingBuffer.c  SOAGen.c  String.c  Test0.soa  Thread.c  ThreadPool.c  Vec.c  main.c
src/ECS/: CMakeLists.txt  ECS.c  ECS.h  main.c
src/ecs/: CMakeLists.txt  ecs.c  ecs.h  main.c
src/klib/: Arena.c  Arena.h  CMakeLists.txt  CmdLine.c  CmdLine.h  Ctx.c  Ctx.h  Gpa.h  IAllocator.c  IAllocator.h  Logger.c  Logger.h  MapDecl.h  MapGen-inl.h  PP.h  PoolGen-inl.h  RingBuffer.c  RingBuffer.h  Span.h  String.c  String.h  StringView.c  StringView.h  Thread.h  ThreadPool.c  ThreadPool.h  Vec.h  VecGen-inl.h  assert.c  assert.h  atomic.h  common.h  file.c  file.h  hash.h  print.c  print.h  time.c  time.h
src/kr/: IAllocator.h  LibcAllocator.h  Map.h  MapGen-inl.h  StringView.h  common.h  print.c  print.h
